--- a/images.html
+++ b/images.html
@@ -119,123 +119,123 @@
 					<div class="yk-row">
 						<dl class="product-item">
 							<dd class="pro-name">
-								<a target="_blank" href="http://www.lifeofbuffoon.cn">广告位</a>
+								<a target="_blank" href="https://www.iconfont.cn">iconfont</a>
 							</dd>
-							<dd>预留广告位，虚位以待</dd>
+							<dd>完全免费，质量较高，需要注册，阿里巴巴矢量图标库，支持关键字搜索，图标种类丰富，支持按尺寸和颜色下载，格式可选。</dd>
 						</dl>
 						<dl class="product-item">
 							<dd class="pro-name">
-								<a target="_blank" href="http://www.lifeofbuffoon.cn">广告位</a>
+								<a target="_blank" href="https://pixabay.com">Pixabay</a>
 							</dd>
-							<dd>预留广告位，虚位以待</dd>
+							<dd>完全免费，质量较高，需要注册，全英文网站，图片数量很多，可以下载图片、矢量文件和插画等，没有版权限制。</dd>
 						</dl>
 						<dl class="product-item">
 							<dd class="pro-name">
-								<a target="_blank" href="http://www.lifeofbuffoon.cn">广告位</a>
+								<a target="_blank" href="https://www.pexels.com">pexels</a>
 							</dd>
-							<dd>预留广告位，虚位以待</dd>
+							<dd>完全免费，质量较高，需要注册，网站支持英文或繁体中文，图片数量很多，仅仅下载不需要注册，没有版权限制。</dd>
 						</dl>
 						<dl class="product-item">
 							<dd class="pro-name">
-								<a target="_blank" href="http://www.lifeofbuffoon.cn">广告位</a>
+								<a target="_blank" href="https://www.splitshire.com">splitshire</a>
 							</dd>
-							<dd>预留广告位，虚位以待</dd>
+							<dd>完全免费，质量较高，不需要注册，全英文网站，是摄影师的作品，质量很高，可以直接右键下载高质量摄影图片。</dd>
 						</dl>
 						<dl class="product-item">
 							<dd class="pro-name">
-								<a target="_blank" href="http://www.lifeofbuffoon.cn">广告位</a>
+								<a target="_blank" href="http://pngimg.com">Pngimg</a>
 							</dd>
-							<dd>预留广告位，虚位以待</dd>
+							<dd>完全免费，质量较高，不需要注册，全英文网站，可以下载无背景的png图片，有分类，支持英文关键字搜索，还不错。</dd>
 						</dl>
 						<dl class="product-item">
 							<dd class="pro-name">
-								<a target="_blank" href="http://www.lifeofbuffoon.cn">广告位</a>
+								<a target="_blank" href="https://www.easyicon.net">easyicon</a>
 							</dd>
-							<dd>预留广告位，虚位以待</dd>
+							<dd>完全免费，质量尚可，不需要注册，免费图标库，可关键字搜索，可以选择尺寸和下载格式，相比阿里巴巴风格更偏卡通化。</dd>
 						</dl>
 						<dl class="product-item">
 							<dd class="pro-name">
-								<a target="_blank" href="http://www.lifeofbuffoon.cn">广告位</a>
+								<a target="_blank" href="http://www.iconninja.com">iconninja</a>
 							</dd>
-							<dd>预留广告位，虚位以待</dd>
+							<dd>完全免费，质量尚可，不需要注册，英文图标库，可以下载png，可以选择不同尺寸，支持英文关键词搜索，偶尔有宝可淘。</dd>
 						</dl>
 						<dl class="product-item">
 							<dd class="pro-name">
-								<a target="_blank" href="http://www.lifeofbuffoon.cn">广告位</a>
+								<a target="_blank" href="https://www.toptal.com/designers/subtlepatterns">Subtle patterns</a>
 							</dd>
-							<dd>预留广告位，虚位以待</dd>
+							<dd>完全免费，质量尚可，不需要注册，英文网站，可以下载各种纹理背景图，种类丰富，支持在线预览，点击就直接可以下载。</dd>
 						</dl>
 						<dl class="product-item">
 							<dd class="pro-name">
-								<a target="_blank" href="http://www.lifeofbuffoon.cn">广告位</a>
+								<a target="_blank" href="http://www.hituyu.com">图鱼</a>
 							</dd>
-							<dd>预留广告位，虚位以待</dd>
+							<dd>完全免费，质量尚可，不需要注册，中文网站，可以下载各种纹理背景图，支持在线预览，支持中文关键字查询，直接下载。</dd>
 						</dl>
 						<dl class="product-item">
 							<dd class="pro-name">
-								<a target="_blank" href="http://www.lifeofbuffoon.cn">广告位</a>
+								<a target="_blank" href="https://webgradients.com">WebGradients</a>
 							</dd>
-							<dd>预留广告位，虚位以待</dd>
+							<dd>完全免费，质量尚可，不需要注册，全英文网站，可以下载180多种渐变背景图，支持在线预览，下载后是png格式。</dd>
 						</dl>
 						<dl class="product-item">
 							<dd class="pro-name">
-								<a target="_blank" href="http://www.lifeofbuffoon.cn">广告位</a>
+								<a target="_blank" href="https://uigradients.com">uiGradients</a>
 							</dd>
-							<dd>预留广告位，虚位以待</dd>
+							<dd>完全免费，质量尚可，不需要注册，全英文网站，可以下载上百种渐变背景图，支持在线预览，下载后是jpg格式。</dd>
 						</dl>
 						<dl class="product-item">
 							<dd class="pro-name">
-								<a target="_blank" href="http://www.lifeofbuffoon.cn">广告位</a>
+								<a target="_blank" href="https://www.ssyer.com">SSYER</a>
 							</dd>
-							<dd>预留广告位，虚位以待</dd>
+							<dd>完全免费，质量较高，需要注册，中文，图片质量较高，有摄影图片还有其他插画之类可以下载，没有版权限制。</dd>
 						</dl>
 						<dl class="product-item">
 							<dd class="pro-name">
-								<a target="_blank" href="http://www.lifeofbuffoon.cn">广告位</a>
+								<a target="_blank" href="https://gratisography.com">gratisography</a>
 							</dd>
-							<dd>预留广告位，虚位以待</dd>
+							<dd>完全免费，质量尚可，不需要注册，英文网站，图片主要是偏创意类型，如果想找脑洞很大的图片可以考虑这里。</dd>
 						</dl>
 						<dl class="product-item">
 							<dd class="pro-name">
-								<a target="_blank" href="http://www.lifeofbuffoon.cn">广告位</a>
+								<a target="_blank" href="https://stocksnap.io">stocksnap.io</a>
 							</dd>
-							<dd>预留广告位，虚位以待</dd>
+							<dd>完全免费，质量较高，不需要注册，全英文网站，图片种类丰富，并且图片质量很高，也支持关键字搜索下载。</dd>
 						</dl>
 						<dl class="product-item">
 							<dd class="pro-name">
-								<a target="_blank" href="http://www.lifeofbuffoon.cn">广告位</a>
+								<a target="_blank" href="https://www.lifeofpix.com">lifeofpix</a>
 							</dd>
-							<dd>预留广告位，虚位以待</dd>
+							<dd>完全免费，质量尚可，不需要注册，全英文网站，图片种类主要是景观与建筑类，大部分是摄影作品，可以偶尔来逛逛。</dd>
 						</dl>
 						<dl class="product-item">
 							<dd class="pro-name">
-								<a target="_blank" href="http://www.lifeofbuffoon.cn">广告位</a>
+								<a target="_blank" href="http://www.lowpolygonart.com">lowpolygonart</a>
 							</dd>
-							<dd>预留广告位，虚位以待</dd>
+							<dd>完全免费，质量尚可，不需要注册，英文LowPoly图片下载网站，里面提供各种色调LowPoly图片，均可免费下载。</dd>
 						</dl>
 						<dl class="product-item">
 							<dd class="pro-name">
-								<a target="_blank" href="http://www.lifeofbuffoon.cn">广告位</a>
+								<a target="_blank" href="http://www.polayoutu.com/collections">泼辣有图</a>
 							</dd>
-							<dd>预留广告位，虚位以待</dd>
+							<dd>完全免费，质量尚可，不需要注册，中文网站，可以下载各种摄影图片，图片质量还不错，没有版权限制，可以用做商用。</dd>
 						</dl>
 						<dl class="product-item">
 							<dd class="pro-name">
-								<a target="_blank" href="http://www.lifeofbuffoon.cn">广告位</a>
+								<a target="_blank" href="http://699pic.com">摄图网</a>
 							</dd>
-							<dd>预留广告位，虚位以待</dd>
+							<dd>不完全免费，质量较高，需要注册，支持版权购买，图片以及其他素材均可付费下载，每天免费一张但不支持商用。</dd>
 						</dl>
 						<dl class="product-item">
 							<dd class="pro-name">
-								<a target="_blank" href="http://www.lifeofbuffoon.cn">广告位</a>
+								<a target="_blank" href="https://www.quanjing.com">全景</a>
 							</dd>
-							<dd>预留广告位，虚位以待</dd>
+							<dd>付费，质量较高，需要注册，内容比较多，图片质量较高，但是只能购买后才能下载使用，购买授权后可以商用。</dd>
 						</dl>
 						<dl class="product-item">
 							<dd class="pro-name">
-								<a target="_blank" href="http://www.lifeofbuffoon.cn">广告位</a>
+								<a target="_blank" href="https://tuchong.com">图虫</a>
 							</dd>
-							<dd>预留广告位，虚位以待</dd>
+							<dd>付费，质量较高，需要注册，内容比较多，图片质量较高，但是只能购买后才能下载使用，购买授权后可以商用。</dd>
 						</dl>
 						<dl class="product-item">
 							<dd class="pro-name">
