--- a/tools.html
+++ b/tools.html
@@ -119,45 +119,45 @@
 					<div class="yk-row">
 						<dl class="product-item">
 							<dd class="pro-name">
-								<a target="_blank" href="http://www.lifeofbuffoon.cn">广告位</a>
+								<a target="_blank" href="https://smartmockups.com/category">smartmockups</a>
 							</dd>
-							<dd>预留广告位，虚位以待</dd>
+							<dd>部分免费，质量尚可，需要注册，是一个全英文样机生成网站，可以将自己的图片融入到电脑、手机或其他场景下，支持下载。</dd>
 						</dl>
 						<dl class="product-item">
 							<dd class="pro-name">
-								<a target="_blank" href="http://www.lifeofbuffoon.cn">广告位</a>
+								<a target="_blank" href="http://new.qiuziti.com">求字体</a>
 							</dd>
-							<dd>预留广告位，虚位以待</dd>
+							<dd>字体识别网站，可以搜索字体引导到相应字体下载页面，当遇到自己不知道名字的字体时，也可以上传图片识别不知道的字体。</dd>
 						</dl>
 						<dl class="product-item">
 							<dd class="pro-name">
-								<a target="_blank" href="http://www.lifeofbuffoon.cn">广告位</a>
+								<a target="_blank" href="https://docsmall.com">图片压缩</a>
 							</dd>
-							<dd>预留广告位，虚位以待</dd>
+							<dd>提供图片压缩功能的工具网站，可以尽量保证原图质量的基础上实现图片压缩，不需要下载安装，直接线上操作即可。</dd>
 						</dl>
 						<dl class="product-item">
 							<dd class="pro-name">
-								<a target="_blank" href="http://www.lifeofbuffoon.cn">广告位</a>
+								<a target="_blank" href="https://pissang.github.io/voxelize-image">voxelize-image</a>
 							</dd>
-							<dd>预留广告位，虚位以待</dd>
+							<dd>一个立体效果生成网站，自己上传图片，可以转换成立体效果，并且可以自己调整各种参数实现不同的效果，可以导出生成图片。</dd>
 						</dl>
 						<dl class="product-item">
 							<dd class="pro-name">
-								<a target="_blank" href="http://www.lifeofbuffoon.cn">广告位</a>
+								<a target="_blank" href="https://pissang.github.io/papercut-box-art">papercut-box-art</a>
 							</dd>
-							<dd>预留广告位，虚位以待</dd>
+							<dd>一个剪纸效果生成网站，自己上传图片，可以转换成剪纸效果，并且可以自己调整各种参数实现不同的效果，可以导出生成图片。</dd>
 						</dl>
 						<dl class="product-item">
 							<dd class="pro-name">
-								<a target="_blank" href="http://www.lifeofbuffoon.cn">广告位</a>
+								<a target="_blank" href="http://weavesilk.com">weavesilk</a>
 							</dd>
-							<dd>预留广告位，虚位以待</dd>
+							<dd>一个变换线效果生成网站，自己鼠标随便点点画画，就能生成特别炫酷的对称的变换线奇幻效果，可以导出生成图片。</dd>
 						</dl>
 						<dl class="product-item">
 							<dd class="pro-name">
-								<a target="_blank" href="http://www.lifeofbuffoon.cn">广告位</a>
+								<a target="_blank" href="https://wordart.com">WORDART</a>
 							</dd>
-							<dd>预留广告位，虚位以待</dd>
+							<dd>文字云生成网站，自己上传图片，自己输入文字，生成指定形状的文字云效果，众多参数可以调节，可以导出图片。</dd>
 						</dl>
 						<dl class="product-item">
 							<dd class="pro-name">
