--- a/tools.html
+++ b/tools.html
@@ -119,6 +119,18 @@
 					<div class="yk-row">
 						<dl class="product-item">
 							<dd class="pro-name">
+								<a target="_blank" href="http://zhongguose.com">中国色</a>
+							</dd>
+							<dd>一个中国色的配色网站，包含众多中国色的色彩，点击可以显示对应色彩背景，而且会显示相应的颜色值，体验超级棒。</dd>
+						</dl>
+						<dl class="product-item">
+							<dd class="pro-name">
+								<a target="_blank" href="https://colordrop.io">colordrop</a>
+							</dd>
+							<dd>一个提供经典配色方案的网站，可以选择自己喜欢的配色方案，点击可生成对应的色彩值，可以用来参考对ppt进行整体配色。</dd>
+						</dl>
+						<dl class="product-item">
+							<dd class="pro-name">
 								<a target="_blank" href="https://smartmockups.com/category">smartmockups</a>
 							</dd>
 							<dd>部分免费，质量尚可，需要注册，是一个全英文样机生成网站，可以将自己的图片融入到电脑、手机或其他场景下，支持下载。</dd>
@@ -161,81 +173,69 @@
 						</dl>
 						<dl class="product-item">
 							<dd class="pro-name">
-								<a target="_blank" href="http://www.lifeofbuffoon.cn">广告位</a>
+								<a target="_blank" href="https://zhitu.isux.us">腾讯智图</a>
 							</dd>
-							<dd>预留广告位，虚位以待</dd>
+							<dd>腾讯出品的大图无损压缩工具，有网页版，也可以下载客户端，完全免费，可以自己选择压缩率，压缩完成后可自行下载。</dd>
 						</dl>
 						<dl class="product-item">
 							<dd class="pro-name">
-								<a target="_blank" href="http://www.lifeofbuffoon.cn">广告位</a>
+								<a target="_blank" href="https://coolbackgrounds.io">coolbackgrounds</a>
 							</dd>
-							<dd>预留广告位，虚位以待</dd>
+							<dd>可以生成渐变或其他几种效果背景的网站，可以选择样式，选择色调，可以导出为png格式的背景图片，效果不错。</dd>
 						</dl>
 						<dl class="product-item">
 							<dd class="pro-name">
-								<a target="_blank" href="http://www.lifeofbuffoon.cn">广告位</a>
+								<a target="_blank" href="http://www.hellofont.cn">字由</a>
 							</dd>
-							<dd>预留广告位，虚位以待</dd>
+							<dd>一款字体查找与应用工具，网页版可以查找，但要使用字体需要下载客户端，大部分是需要购买授权，少量可以免费使用。</dd>
 						</dl>
 						<dl class="product-item">
 							<dd class="pro-name">
-								<a target="_blank" href="http://www.lifeofbuffoon.cn">广告位</a>
+								<a target="_blank" href="https://bigjpg.com">bigjpg</a>
 							</dd>
-							<dd>预留广告位，虚位以待</dd>
+							<dd>图片放大网站，上传自己的图片，可以进行放大，并且保持图片更清晰，主要用于一些不太清晰小图片的处理，效果不错。</dd>
 						</dl>
 						<dl class="product-item">
 							<dd class="pro-name">
-								<a target="_blank" href="http://www.lifeofbuffoon.cn">广告位</a>
+								<a target="_blank" href="https://wangyasai.github.io/Stars-Emmision">Stars-Emmision</a>
 							</dd>
-							<dd>预留广告位，虚位以待</dd>
+							<dd>放射线散点生成工具，在线生成，效果可以自己配置，配置完成后可以保存为图片，效果酷炫，有合适的场景非常棒。</dd>
 						</dl>
 						<dl class="product-item">
 							<dd class="pro-name">
-								<a target="_blank" href="http://www.lifeofbuffoon.cn">广告位</a>
+								<a target="_blank" href="https://photomosh.com">photomosh</a>
 							</dd>
-							<dd>预留广告位，虚位以待</dd>
+							<dd>故障艺术生成网站，可以生成类似抖音风等多种风格，比如扭动等等，可以保存为gif，充分发挥你的想象力吧。</dd>
 						</dl>
 						<dl class="product-item">
 							<dd class="pro-name">
-								<a target="_blank" href="http://www.lifeofbuffoon.cn">广告位</a>
+								<a target="_blank" href="https://codepen.io/tsuhre/full/BYbjyg">炫光生成</a>
 							</dd>
-							<dd>预留广告位，虚位以待</dd>
+							<dd>炫光效果生成的网站，随机生成各种炫光效果，并且可以下载为图片，经过简单处理就可以作为PPT背景图片了。</dd>
 						</dl>
 						<dl class="product-item">
 							<dd class="pro-name">
-								<a target="_blank" href="http://www.lifeofbuffoon.cn">广告位</a>
+								<a target="_blank" href="http://hao.uisdc.com">优设网</a>
 							</dd>
-							<dd>预留广告位，虚位以待</dd>
+							<dd>设计师综合导航，里面涵盖设计师各方面的应用网站，包括图片、素材、字体、配色等等各方面的推荐网站，大而全。</dd>
 						</dl>
 						<dl class="product-item">
 							<dd class="pro-name">
-								<a target="_blank" href="http://www.lifeofbuffoon.cn">广告位</a>
+								<a target="_blank" href="http://meihua.docer.com">PPT美化大师</a>
 							</dd>
-							<dd>预留广告位，虚位以待</dd>
+							<dd>这是一个Office PPT的插件，需要下载安装，里面有图标、图表等素材库，智能排版等，还与其他一些功能可以自己探索。</dd>
 						</dl>
 						<dl class="product-item">
 							<dd class="pro-name">
-								<a target="_blank" href="http://www.lifeofbuffoon.cn">广告位</a>
+								<a target="_blank" href="https://www.papocket.com">PA口袋动画</a>
 							</dd>
-							<dd>预留广告位，虚位以待</dd>
+							<dd>这是一个Office PPT的插件，需要下载安装，主要用来方便的进行动画效果的制作，能够将一些重复性繁琐动画一键搞定。</dd>
 						</dl>
 						<dl class="product-item">
 							<dd class="pro-name">
-								<a target="_blank" href="http://www.lifeofbuffoon.cn">广告位</a>
+								<a target="_blank" href="https://www.islide.cc">iSlide</a>
 							</dd>
-							<dd>预留广告位，虚位以待</dd>
-						</dl>
-						<dl class="product-item">
-							<dd class="pro-name">
-								<a target="_blank" href="http://www.lifeofbuffoon.cn">广告位</a>
-							</dd>
-							<dd>预留广告位，虚位以待</dd>
-						</dl>
-						<dl class="product-item">
-							<dd class="pro-name">
-								<a target="_blank" href="http://www.lifeofbuffoon.cn">广告位</a>
-							</dd>
-							<dd>预留广告位，虚位以待</dd>
+							<dd>这是一个Office PPT的插件，需要下载安装，主要用来提升PPT制作效率，有内置模板，也有各种图标、图表等丰富资源。</dd>
 						</dl>
 						<dl class="product-item">
 							<dd class="pro-name">
