--- a/images.html
+++ b/images.html
@@ -237,7 +237,7 @@
 							</dd>
 							<dd>付费，质量较高，需要注册，内容比较多，图片质量较高，但是只能购买后才能下载使用，购买授权后可以商用。</dd>
 						</dl>
-						<dl class="product-item">
+						<!-- <dl class="product-item">
 							<dd class="pro-name">
 								<a target="_blank" href="http://www.lifeofbuffoon.cn">广告位</a>
 							</dd>
@@ -260,7 +260,7 @@
 								<a target="_blank" href="http://www.lifeofbuffoon.cn">广告位</a>
 							</dd>
 							<dd>预留广告位，虚位以待</dd>
-						</dl>
+						</dl> -->
 					</div>
 				</div>
 			</div>
