--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 							</dd>
 							<dd>完全免费，模板质量一般，不需要注册，模板很多，但风格都很一般，不太容易找到高质量的模板，一般来说不建议在这里找模板了。</dd>
 						</dl>
-						<dl class="product-item">
+						<!-- <dl class="product-item">
 							<dd class="pro-name">
 								<a target="_blank" href="http://www.lifeofbuffoon.cn">广告位</a>
 							</dd>
@@ -260,7 +260,7 @@
 								<a target="_blank" href="http://www.lifeofbuffoon.cn">广告位</a>
 							</dd>
 							<dd>预留广告位，虚位以待</dd>
-						</dl>
+						</dl> -->
 					</div>
 				</div>
 			</div>
