--- a/studys.html
+++ b/studys.html
@@ -119,11 +119,29 @@
 					<div class="yk-row">
 						<dl class="product-item">
 							<dd class="pro-name">
-								<a target="_blank" href="http://www.lifeofbuffoon.cn">广告位</a>
+								<a target="_blank" href="https://mp.weixin.qq.com/s/q7tR7ZYxWnpaT-tisT8QqA">秋叶PPT合集</a>
 							</dd>
-							<dd>预留广告位，虚位以待</dd>
+							<dd>这是秋叶PPT收集整理的全网经典PPT短教程文章合集,效率、排版、素材、字体、操作、图标、动画、场景等分类应有尽有,建议收藏。</dd>
 						</dl>
 						<dl class="product-item">
+							<dd class="pro-name">
+								<a target="_blank" href="http://www.lifeofbuffoon.cn/ppt">广告位</a>
+							</dd>
+							<dd>预留广告位，虚位以待预留广告位，虚位以待预留广告位，虚位以待预留广告位，虚位以待预留广告位，虚位以待预留广告位，虚位以待</dd>
+						</dl>
+						<dl class="product-item">
+							<dd class="pro-name">
+								<a target="_blank" href="http://www.lifeofbuffoon.cn/ppt">广告位</a>
+							</dd>
+							<dd>预留广告位，虚位以待预留广告位，虚位以待预留广告位，虚位以待预留广告位，虚位以待预留广告位，虚位以待预留广告位，虚位以待</dd>
+						</dl>
+						<dl class="product-item">
+							<dd class="pro-name">
+								<a target="_blank" href="http://www.lifeofbuffoon.cn/ppt">广告位</a>
+							</dd>
+							<dd>预留广告位，虚位以待预留广告位，虚位以待预留广告位，虚位以待预留广告位，虚位以待预留广告位，虚位以待预留广告位，虚位以待</dd>
+						</dl>
+						<!-- <dl class="product-item">
 							<dd class="pro-name">
 								<a target="_blank" href="http://www.lifeofbuffoon.cn">广告位</a>
 							</dd>
@@ -242,25 +260,7 @@
 								<a target="_blank" href="http://www.lifeofbuffoon.cn">广告位</a>
 							</dd>
 							<dd>预留广告位，虚位以待</dd>
-						</dl>
-						<dl class="product-item">
-							<dd class="pro-name">
-								<a target="_blank" href="http://www.lifeofbuffoon.cn">广告位</a>
-							</dd>
-							<dd>预留广告位，虚位以待</dd>
-						</dl>
-						<dl class="product-item">
-							<dd class="pro-name">
-								<a target="_blank" href="http://www.lifeofbuffoon.cn">广告位</a>
-							</dd>
-							<dd>预留广告位，虚位以待</dd>
-						</dl>
-						<dl class="product-item">
-							<dd class="pro-name">
-								<a target="_blank" href="http://www.lifeofbuffoon.cn">广告位</a>
-							</dd>
-							<dd>预留广告位，虚位以待</dd>
-						</dl>
+						</dl> -->
 					</div>
 				</div>
 			</div>
