--- a/tools.html
+++ b/tools.html
@@ -137,7 +137,7 @@
 						</dl>
 						<dl class="product-item">
 							<dd class="pro-name">
-								<a target="_blank" href="http://new.qiuziti.com">求字体</a>
+								<a target="_blank" href="http://qiuziti.com">求字体</a>
 							</dd>
 							<dd>字体识别网站，可以搜索字体引导到相应字体下载页面，当遇到自己不知道名字的字体时，也可以上传图片识别不知道的字体。</dd>
 						</dl>
@@ -237,7 +237,7 @@
 							</dd>
 							<dd>这是一个Office PPT的插件，需要下载安装，主要用来提升PPT制作效率，有内置模板，也有各种图标、图表等丰富资源。</dd>
 						</dl>
-						<dl class="product-item">
+						<!-- <dl class="product-item">
 							<dd class="pro-name">
 								<a target="_blank" href="http://www.lifeofbuffoon.cn">广告位</a>
 							</dd>
@@ -260,7 +260,7 @@
 								<a target="_blank" href="http://www.lifeofbuffoon.cn">广告位</a>
 							</dd>
 							<dd>预留广告位，虚位以待</dd>
-						</dl>
+						</dl> -->
 					</div>
 				</div>
 			</div>
