--- a/studys.html
+++ b/studys.html
@@ -125,21 +125,21 @@
 						</dl>
 						<dl class="product-item">
 							<dd class="pro-name">
-								<a target="_blank" href="http://www.lifeofbuffoon.cn/ppt">广告位</a>
+								<a target="_blank" href="http://www.tretars.com/ppt-learning">比格PPT教程</a>
 							</dd>
-							<dd>预留广告位，虚位以待预留广告位，虚位以待预留广告位，虚位以待预留广告位，虚位以待预留广告位，虚位以待预留广告位，虚位以待</dd>
+							<dd>比格PPT网站中的教程合集，这不是面向入门级的系统课程，而是零零散散的一些具体效果的教程合集，适合进阶、找灵感，可以常逛逛。</dd>
 						</dl>
 						<dl class="product-item">
 							<dd class="pro-name">
-								<a target="_blank" href="http://www.lifeofbuffoon.cn/ppt">广告位</a>
+								<a target="_blank" href="http://www.pptfans.cn/315656.html">秋叶三分钟教程</a>
 							</dd>
-							<dd>预留广告位，虚位以待预留广告位，虚位以待预留广告位，虚位以待预留广告位，虚位以待预留广告位，虚位以待预留广告位，虚位以待</dd>
+							<dd>这是秋叶PPT三分钟教程的合集，持续更新，不是系统化的教程，而是高级特性或者新奇效果的教程，面向高阶用户，可以寻找灵感，增长见识。</dd>
 						</dl>
 						<dl class="product-item">
 							<dd class="pro-name">
-								<a target="_blank" href="http://www.lifeofbuffoon.cn/ppt">广告位</a>
+								<a target="_blank" href="https://zhuanlan.zhihu.com/c_189251938">PPT保姆级教程</a>
 							</dd>
-							<dd>预留广告位，虚位以待预留广告位，虚位以待预留广告位，虚位以待预留广告位，虚位以待预留广告位，虚位以待预留广告位，虚位以待</dd>
+							<dd>这是一个知乎专栏，持续更新中，每一期教程都会分享一张超高水准PPT案例，讲解案例从0到1的整个制作教程，可以长期关注，增长见识。</dd>
 						</dl>
 						<!-- <dl class="product-item">
 							<dd class="pro-name">
